# djangogirls

./: .gitignore  pyproject.toml
src/: manage.py
src/blog/: models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/website/: settings.py  urls.py
